Fix missing spaces

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
-body{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
-.header{
-    font-size: 6rem;
-    color: #6024DD;
+
+.header {
+  font-size: 6rem;
+  color: #6024dd;
 }
